# teaching-tracing

./: BEST_PRACTICES.md  Cargo.toml  Makefile  README.md
.github/: CODEOWNERS
.github/workflows/: rust.yml
examples/: bad_holding_span.rs  bad_program_span.rs  good_tracing.rs
src/: lib.rs  metrics.rs  monitor.rs  obs.rs  stats.rs  trace.rs
