[package]
name = "metrics-tracing-example"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre = "0.6.12"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"

opentelemetry = "0.31.0"
opentelemetry-otlp = "0.31.0"
opentelemetry-semantic-conventions = { version = "0.31.0", features = ["semconv_experimental"] }
opentelemetry_sdk = "0.31.0"

sysinfo = "0.37.2"

tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json", "registry"] }
